Added creator to show_campaigns.

--- a/webservice/templates/campaign_info.html
+++ b/webservice/templates/campaign_info.html
@@ -53,7 +53,7 @@ Campaign Stage {{CampaignStage.name}}
                </a>
               </div>
               <div class=item>
-               <a href="https://fifemon.fnal.gov/monitor/d/000000213/poms-tasks?orgId=1&var-Experiment={{CampaignStage.experiment|replace('samdev','fermilab')}}&var-Campaign={{CampaignStage.campaign_stage_id}}&from=now-7d&to=now" >
+               <a href="https://fifemon.fnal.gov/monitor/d/000000213/poms-tasks?orgId=1&var-Experiment={{CampaignStage.experiment|replace('samdev','fermilab')}}&var-Campaign={{CampaignStage.campaign_stage_id}}&from=now-7d&to=now" target='_blank'>
                    <i class="external bar chart icon" data-content="Submissions"></i>Submissions (Landscape)
                </a>
               </div>
