Updated dcache link.

--- a/webservice/templates/index.html
+++ b/webservice/templates/index.html
@@ -270,9 +270,9 @@ Job Launches: {{launches}}
             </div>
         </div>
         <div class="ui three bottom attached buttons">
-            <a target="_blank" href="https://fifemon.fnal.gov/monitor/d/000000177/dcache-io-rate-by-vo?orgId=1&var-vo={{session_experiment}}&var-PoolGroup=All">
+            <a target="_blank" href="https://fifemon.fnal.gov/monitor/d/000000173/dcache-transfer-overview?orgId=1">
                 <div class="ui button">
-                    Joe?
+                    Overview
                 </div>
             </a>
             <div class="ui button"></div>
