Text naming corrections

--- a/webservice/templates/campaign_definition_edit.html
+++ b/webservice/templates/campaign_definition_edit.html
@@ -103,7 +103,7 @@ Job Types {%include 'help_button.html'%}
 <div class="ui modal" id="confirm_modal">
   <i class="close icon"></i>
   <div class="header">
-    Delete Experiment
+    Delete Job Type
   </div>
   <div class="image content">
     <div class="image">
