--- a/webservice/templates/login_setup_edit.html
+++ b/webservice/templates/login_setup_edit.html
@@ -95,7 +95,7 @@ Login/Setup {{ show_hint('', 'Help page') }}
 <div class="ui modal" id="confirm_modal">
   <i class="close icon"></i>
   <div class="header">
-    Delete Experiment
+    Delete Login/Setup
   </div>
   <div class="image content">
     <div class="image">
