--- a/webservice/templates/layout.html
+++ b/webservice/templates/layout.html
@@ -45,6 +45,9 @@
     <link rel="stylesheet" href="https://mottie.github.io/tablesorter/css/theme.ice.css">
     <link rel="stylesheet" href="https://mottie.github.io/tablesorter/css/theme.dropbox.css">
 
+    <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+
     <style type="text/css">
       div.scrollable {
         width: 100%;
