--- a/webservice/static/css/gui_editor_3.css
+++ b/webservice/static/css/gui_editor_3.css
@@ -119,7 +119,7 @@ div.box.selected {
 #mystages {
     /* width: 1000px;   */
     width: 90%;
-    height: 600px;
+    height: 400px;
     border: 1px solid lightgray;
 }
 
@@ -168,4 +168,8 @@ select:invalid  {
     /* background-color: #CCE2FF; */
     /* color: grey; */
     background-color: lightcyan;
+}
+
+.popup_form {
+	cursor: move;
 }
