--- a/webservice/templates/campaign_definition_edit.html
+++ b/webservice/templates/campaign_definition_edit.html
@@ -15,7 +15,7 @@ POMS
 </style>
 
 {%block header%}
-Job Types {%include 'help_button.html'%}
+JobTypes {%include 'help_button.html'%}
 {%endblock%}
 
 {%block subheader%}
@@ -103,7 +103,7 @@ Job Types {%include 'help_button.html'%}
 <div class="ui modal" id="confirm_modal">
   <i class="close icon"></i>
   <div class="header">
-    Delete Job Type
+    Delete JobType
   </div>
   <div class="image content">
     <div class="image">
@@ -129,7 +129,7 @@ Job Types {%include 'help_button.html'%}
 <div class="ui large modal" id="definition_add_edit_modal">
   <i class="close icon"></i>
   <h3 class="block header"><span id="ae_experiment">
-    Job Type Editor </span> {%include 'help_button.html'%}
+    JobType Editor </span> {%include 'help_button.html'%}
   </h3>
   <div class="ui hidden divider"></div>
   <div class="ui text container">
@@ -703,7 +703,7 @@ function ep_down_button(current_row) {
 
   function delete_definition(name,job_type_id) {
     var cdname = name;
-    $("#confirm_modal_message").text("Delete the campaign definition named " +name+" ?")
+    $("#confirm_modal_message").text("Delete the JobType named " +name+" ?")
     mod_form = $("#confirm_modal").modal({
     closable  : false,
     onApprove : function(){
@@ -723,7 +723,7 @@ function ep_down_button(current_row) {
       $("#ae_definition_action").val("add");
       $("#ae_definition_name").val( "CLONE OF: " + $("#cdf_name_"+index).text() );
     }
-    $("#ae_experiment").text("Job Type Editor  ({{ data.curr_experiment if data.curr_experiment is defined}})");
+    $("#ae_experiment").text("JobType Editor  ({{ data.curr_experiment if data.curr_experiment is defined}})");
     $("#ae_campaign_definition_id").val( $("#cdf_id_"+index).text()  );
     $("#ae_launch_script").val( $("#cdf_script_"+index).text() );
     $("#ae_definition_parameters_text").val( $("#cdf_definition_"+index).text() );
