--- a/webservice/templates/campaign_stage_edit.html
+++ b/webservice/templates/campaign_stage_edit.html
@@ -676,7 +676,7 @@ function ep_down_button(current_row) {
 
 function delete_campaign(name,campaign_stage_id) {
   var cname = name;
-  $("#confirm_modal_message").text("Delete the campaign named " +name+" ?");
+  $("#confirm_modal_message").text("Delete the campaign stage named " +name+" ?");
   $("#confirm_modal").modal({
   closable  : false,
   onApprove : function(){
