--- a/webservice/templates/layout.html
+++ b/webservice/templates/layout.html
@@ -130,7 +130,8 @@
 	    </div>
 	  </div>
 	</div>
-	<div class="ui divider"  style="margin-top: 0px;">
+	<div class="ui divider"  style="margin: 0px;">
+    </div>
       <div class="ui three column middle aligned grid" style="margin-top: 5px;">
         <div class="column"></div>
         <div class="column">
@@ -140,7 +141,6 @@
         </div>
         <div class="column"></div>
     </div>
-  </div>
 	{% include 'datepicker_block.html' %}
 	<div class="no example" style="margin: 0px 10px 0px 10px;">
 	  {%block content%} {%endblock%}
