--- a/webservice/templates/campaign_info.html
+++ b/webservice/templates/campaign_info.html
@@ -10,7 +10,8 @@ Campaign Stage Info {%include 'help_button.html'%}
 {%endblock%}
 
 {%block subheader%}
-Campaign Stage {{CampaignStage.name}}
+Campaign Stage {{CampaignStage.name}}  <br>
+in Campaign {{CampaignStage.campaign_obj.name}} 
 {%endblock%}
 
 
@@ -21,14 +22,15 @@ Campaign Stage {{CampaignStage.name}}
 </style>
 
 
-
-
   <div class="ui segment raised ">
 
     <!-- Campaign_info: {{Campaign_info}} -->
 <iframe scrolling="no" style="width: 38%; min-width: 25em; height: 17em; overflow: hidden !important;" src="https://fifemon.fnal.gov/monitor/d-solo/otZRzhImk/poms-campaign?theme=light&from=now-30d&to=now&var-campaign={{CampaignStage.campaign_stage_id}}&orgId=1&panelId=2" frameborder="0"></iframe>
-<iframe scrolling="no" style="width: 29%; min-width: 10em; height: 17em; overflow: hidden !important;"  src="https://fifemon.fnal.gov/monitor/d-solo/otZRzhImk/poms-campaign?theme=light&from=now-365d&to=now&var-campaign={{CampaignStage.campaign_stage_id}}&orgId=1&panelId=18"frameborder="0"></iframe>
-<iframe  scrolling="no" style="width: 29%; min-width: 10em; height: 17em; overflow: hidden !important;" src="https://fifemon.fnal.gov/monitor/d-solo/otZRzhImk/poms-campaign?theme=light&from=now-365d&to=now&var-campaign={{CampaignStage.campaign_stage_id}}&orgId=1&panelId=12" frameborder="0"></iframe>
+<iframe scrolling="no" style="width: 29%; min-width: 10em; height: 17em; overflow: hidden !important;"  src="https://fifemon.fnal.gov/monitor/d-solo/otZRzhImk/poms-campaign?theme=light&from=now-30d&to=now&var-campaign={{CampaignStage.campaign_stage_id}}&orgId=1&panelId=18"frameborder="0"></iframe>
+<iframe  scrolling="no" style="width: 29%; min-width: 10em; height: 17em; overflow: hidden !important;" src="https://fifemon.fnal.gov/monitor/d-solo/otZRzhImk/poms-campaign?theme=light&from=now-30d&to=now&var-campaign={{CampaignStage.campaign_stage_id}}&orgId=1&panelId=12" frameborder="0"></iframe>
+
+  <br>
+  <span class="info">statistics for last 30 days</span>
 
     <script>
         $("#campaign th").attr("style", "padding: 0.3em; border-left: 1; text-align: center;");
