--- a/webservice/templates/index.html
+++ b/webservice/templates/index.html
@@ -292,12 +292,12 @@ Job Launches: {{launches}}
 <div class="ui divider"  style="margin-top: 0px;"></div>
 
 <div class="ui right aligned grid" style="margin-right: 30px; margin-bottom: 15px">
-    <div class="left floated left aligned four wide column">
-        <div class="ui teal label">Version {{version}}</div>
-    </div>
-    <div class="right floated right align four wide column">
+    <div class="right floated right aligned four wide column">
         <a target="_blank" href="https://cdcvs.fnal.gov/redmine/projects/prod_mgmt_db/wiki/Release_Notes">
-            <div class="ui teal label">Release Notes</div>
+            <button class="ui teal small button">
+                <i class="share icon"></i>
+                Version: {{version}}
+            </button>
         </a>
     </div>
 </div>
