Fix the problem with URL after campaign deletion

--- a/webservice/templates/show_campaigns.html
+++ b/webservice/templates/show_campaigns.html
@@ -164,7 +164,7 @@ Campaigns {%include 'help_button.html'%}
                         Deletions will <b>not</b> occur if the campaign has been submitted.
                     </p>
         </div>
-        <form id="delete_campaign_form" class="ui form" method="GET" action="{{pomspath}}/show_campaigns">
+        <form id="delete_campaign_form" class="ui form" method="POST" action="{{pomspath}}/show_campaigns">
             <div class="one field">
                 <div class="field">
                     <label>Campaign to Delete</label>
