--- a/webservice/static/css/json_field_editor.css
+++ b/webservice/static/css/json_field_editor.css
@@ -11,10 +11,14 @@
     margin: 2px;
     padding: 1em;
     opacity: 1;
-    width: 45em;
+    width: 60em;
     box-shadow: 10px 10px 20px grey;
 }
 
+
+.popup_form_json table {
+    width: 100%;
+}
 
 .popup_form_json h3 {
     margin-top: 0;
