--- a/webservice/static/css/gui_editor_3.css
+++ b/webservice/static/css/gui_editor_3.css
@@ -94,7 +94,7 @@ div.box.selected {
    width: 100%;
 }
 .popup_form input, select {
-    width: 90%;
+    width: 60%;
 }
 .popup_form label {
     display: inline-block;
@@ -120,7 +120,18 @@ div.box.selected {
     /* width: 1000px;   */
     width: 90%;
     height: 400px;
-    border: 1px solid lightgray;
+    border-width: 0px 1px 1px 1px;
+    border-style: solid;
+    border-color: lightgray;
+}
+
+#myhelp {
+    width: 90%;
+    border-width: 1px 1px 0px 1px;
+    border-style: solid;
+    border-color: lightgray;
+    text-align: right;
+    /* padding-right: 10px; */
 }
 
 #mydefaults, #myjobtypes {
