Customize edit network menu

--- a/webservice/templates/gui_wf_edit.html
+++ b/webservice/templates/gui_wf_edit.html
@@ -42,7 +42,7 @@
         </tr>
 -->
         <tr>
-            <td>label</td>
+            <td>Name:</td>
             <td> <input id="node-label" value="new value"> </td>
         </tr>
     </table>
