--- a/webservice/templates/show_campaigns.html
+++ b/webservice/templates/show_campaigns.html
@@ -61,24 +61,24 @@ Campaigns {%include 'help_button.html'%}
                 <!-- id is hidden by css look for #campaign_table above -->
                 <td id="c_id_{{loop.index}}">{{s.campaign_id}}</td>
                 <td align="center"><input type="checkbox" id="c_cbox_{{loop.index}}"></td>
-                <td><a href="{{pomspath}}/show_campaign_stages?campaign_name={{s.name|e}}">{{s.name}}</a></td>
+                <td><a href="{{pomspath}}/show_campaign_stages?campaign_name={{s.name|urlencode}}">{{s.name}}</a></td>
                 <td id="running_{{s.campaign_id}}" style="text-align:right; padding-right: 1em">...</td>
                 <td>
-                    <a href="{{pomspath}}/campaign_time_bars?tag={{s.name}}&tdays=7&tmax={{last_activity}}">
+                    <a href="{{pomspath}}/campaign_time_bars?tag={{s.name|urlencode}}&tdays=7&tmax={{last_activity}}">
                         <button type="button">
                         <i class="chart line icon"></i>
                         </button>
                     </a>
                 </td>
                 <td>
-                    <a href="{{pomspath}}/campaign_deps?tag={{s.name}}">
+                    <a href="{{pomspath}}/campaign_deps?tag={{s.name|urlencode}}">
                         <button type="button">
                             <i class="sitemap icon"></i>
                         </button>
                     </a>
                 </td>
                 <td>
-                    <a href="{{pomspath}}/gui_wf_edit?campaign={{s.name}}">
+                    <a href="{{pomspath}}/gui_wf_edit?campaign={{s.name|urlencode}}">
                         <button {{ 'class="ui disabled button"' if (data.authorized[loop.index] == false) }}>
                             <i class="edit icon"></i>
                         </button>
@@ -90,7 +90,7 @@ Campaigns {%include 'help_button.html'%}
                     </button>
                 </td>
                 <td>
-                    <a href="{{pomspath}}/campaign_deps_ini?tag={{s.name}}">
+                    <a href="{{pomspath}}/campaign_deps_ini?tag={{s.name|urlencode}}">
                         <button type="button">
                             <i class="list icon"></i>
                         </button>
@@ -206,7 +206,7 @@ Campaigns {%include 'help_button.html'%}
                     <div id="tag_container">
                         {% for tag in tags %}
                             <i class="trash outline icon link poms_tag" id="{{Campaign.campaign_id}}_{{tag.tag_id}}"></i>
-                            <a href="{{pomspath}}/search_tags?q={{tag.tag_name}}" class="ui blue tag label" id="{{Campaign.campaign_id}}_{{tag.tag_id}}_">{{tag.tag_name}}</a>
+                            <a href="{{pomspath}}/search_tags?q={{tag.tag_name|urlencode}}" class="ui blue tag label" id="{{Campaign.campaign_id}}_{{tag.tag_id}}_">{{tag.tag_name}}</a>
                         {% endfor %}
                     </div>
                 </div>
@@ -423,7 +423,7 @@ function pop_tag_untag_modal() {
             for (const tag of data.result) {
                 const [tag_id, tag_name] = tag
                 const cids = csv.join('c')
-                const new_tag = `<span><a href="{{pomspath}}/search_tags?q=${tag_name}" class="ui blue tag label" id="${cids}_${tag_id}_">${tag_name}</a>`;
+                const new_tag = `<span><a href="{{pomspath}}/search_tags?q=${tag_name|urlencode}" class="ui blue tag label" id="${cids}_${tag_id}_">${tag_name}</a>`;
                 const new_trash_can = `<i class="trash outline bordered inverted blue icon link poms_tag" id="${cids}_${tag_id}" style="border-radius: 5px;"></i></span>`;
                 $('#tag_container').append(new_tag + new_trash_can);
                 add_click_handler();
@@ -490,7 +490,7 @@ $('#add_button').on('click', function (e) {
             const campaigns_tags_composite_key = data.campaign_id.toString().replace(/,/g, 'c') + "_" + data.tag_id.toString();
             $('#response').html(data.msg);
 
-            const new_tag = `<span><a href="{{pomspath}}/search_tags?q=${data.tag_name}" class="ui blue tag label" id="${campaigns_tags_composite_key}_">${data.tag_name}</a>`;
+            const new_tag = `<span><a href="{{pomspath}}/search_tags?q=${data.tag_name|urlencode}" class="ui blue tag label" id="${campaigns_tags_composite_key}_">${data.tag_name}</a>`;
             const new_trash_can = `<i class="trash outline bordered inverted blue icon link poms_tag" id="${campaigns_tags_composite_key}" style="border-radius: 5px;"></i></span>`;
             $('#tag_container').append(new_tag + new_trash_can);
             //$('#tag_container').append(new_tag);
