--- a/webservice/static/css/gui_editor_3.css
+++ b/webservice/static/css/gui_editor_3.css
@@ -120,16 +120,17 @@ div.box.selected {
     /* width: 1000px;   */
     width: 90%;
     height: 400px;
-    border-width: 0px 1px 1px 1px;
+    /* border-width: 0px 1px 1px 1px; */
+    border-width: 1px 1px 1px 1px;
     border-style: solid;
     border-color: lightgray;
 }
 
 #myhelp {
     width: 90%;
-    border-width: 1px 1px 0px 1px;
+    /* border-width: 1px 1px 0px 1px;
     border-style: solid;
-    border-color: lightgray;
+    border-color: lightgray; */
     text-align: right;
     /* padding-right: 10px; */
 }
