Corrected unauthorized_user form which did not display.

--- a/webservice/templates/unauthorized_user.html
+++ b/webservice/templates/unauthorized_user.html
@@ -2,15 +2,18 @@
   <head><title>401 Unauthorized User</title></head>
   <body bgcolor="white">
     <center><h1>401 Unauthorized User</h1></center>
-    <center><p>
+      <pre>
         Your account is not authorized to use POMS.  To get access, do the following:
         -- Open the webpage to <a href="https://fermi.service-now.com/wp" target="_blank">SNOW</a>.
         -- Select the tile "Request Something".
         -- Select the tile "Experiment/Project/Collaboration Computing Account".
         -- Choose your experiment.
-        -- Choose the role "Production".   (Analysis is not yet supported.)
+        -- Choose the role "Production" or "Analysis". 
 
         Please do <b>not</b> fill out an incident or request to POMS as this must go through your experiment.
-    </p></center>
+
+        For more information please refer to 
+        <a href="https://cdcvs.fnal.gov/redmine/projects/prod_mgmt_db/wiki/POMS_User_Documentation#Getting-access-New-Experiments-New-Accounts-Users-and-Roles" target="_blank">POMS: Getting Started</a>
+      </pre>
   </body>
 </html>
