Added campaign and stage name to launch_jobs form.

--- a/webservice/templates/launch_jobs.html
+++ b/webservice/templates/launch_jobs.html
@@ -5,24 +5,17 @@ Launch Jobs Results
 {%endblock%}
 
 {%block header%}
-<h1 class="ui header">
+<h2 class="ui header">
+         Campaign: {{campaign_name}}<br>
+         Stage: {{stage_name}}
          Results {%include 'help_button.html'%}
-
-          <div class="sub header">
-              Output of submit command
-          </div>
-</h1>
+</h2>
 {%endblock%}
-
-
-
-
-{%block subheader%}
-{%endblock%}
-
-
 
 {%block content %}
+<div class="ui center aligned tertiary text container segment">
+        Output of submit command
+</div>
 
 <div class="ui raised padded text container segment">
 <b><pre>
