removed word from title

--- a/webservice/templates/launch_jobs.html
+++ b/webservice/templates/launch_jobs.html
@@ -8,13 +8,13 @@ Launch Jobs Results
 <h2 class="ui header">
          Campaign: {{campaign_name}}<br>
          Stage: {{stage_name}}
-         Results {%include 'help_button.html'%}
+         {%include 'help_button.html'%}
 </h2>
 {%endblock%}
 
 {%block content %}
 <div class="ui center aligned tertiary text container segment">
-        Output of submit command
+        Results of Output of submit command
 </div>
 
 <div class="ui raised padded text container segment">
