show the message in the 404 not found page.

--- a/webservice/templates/page_not_found.html
+++ b/webservice/templates/page_not_found.html
@@ -1,7 +1,9 @@
 <html>
   <head><title>404 Not Found</title></head>
   <body bgcolor="white">
-    <center><h1>404 Not Found</h1></center>
+    <center><h1>404 Not Found </h1>
+    %(message)s
+    <p>
     <center><A HREF="/poms">POMS</center>
   </body>
 </html>
